--- a/idp-oidc-extension-parent/pom.xml
+++ b/idp-oidc-extension-parent/pom.xml
@@ -55,6 +55,13 @@ See LICENSE.txt file in the root directory of this repository for the copyright/
                <version>${shib.idp.version}</version>
                <artifactId>idp-authn-api</artifactId>
             </dependency>
+            <dependency>
+	       <groupId>net.shibboleth.idp</groupId>
+               <version>${shib.idp.version}</version>
+	       <artifactId>idp-profile-api</artifactId>
+               <type>test-jar</type>
+               <scope>test</scope>
+	    </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
