oidc ext api added to deps

--- a/idp-oidc-extension-impl/pom.xml
+++ b/idp-oidc-extension-impl/pom.xml
@@ -27,6 +27,10 @@
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
+                <dependency>
+                        <groupId>org.geant</groupId>
+                        <artifactId>idp-oidc-extension-api</artifactId>
+                </dependency>
 	</dependencies>
 	<build>
 		<plugins>
