--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
 ---
-- src: CSC-IT-Center-for-Science.mariadb
 - src: cmprescott.xml
-- src: CSC-IT-Center-for-Science.jetty
-- src: CSC-IT-Center-for-Science.shibboleth-idp
-- src: CSC-IT-Center-for-Science.apache
+- src: CSCfi.mariadb
+- src: CSCfi.jetty
+- src: CSCfi.shibboleth-idp
+- src: CSCfi.apache
 - src: CSCfi.389-ds
