--- a/oidcshibop.yml
+++ b/oidcshibop.yml
@@ -7,9 +7,9 @@
     - cmprescott.xml
     - { role: keystore }
     - { role: CSCfi.389-ds, dirsrv_password: testpword, replpwd: testpword, administration_domain: csc.fi, root: "dc=csc,dc=fi", supplier: "{{ service_name }}", mode: single, service_name: "{{ service_name }}", aci: "teppo@{{ service_name }}"}
-    - { role: CSC-IT-Center-for-Science.mariadb, mariadb_root_password: testpass }
-    - { role: CSC-IT-Center-for-Science.jetty }
-    - { role: CSC-IT-Center-for-Science.shibboleth-idp, scope: csc.fi, port: 8443, bport: 8444, keystore_password: testpword }
+    - { role: CSCfi.mariadb, mariadb_root_password: testpass }
+    - { role: CSCfi.jetty }
+    - { role: CSCfi.shibboleth-idp, scope: csc.fi, port: 8443, bport: 8444, keystore_password: testpword }
     - { role: keystore, idp: true, keystore_password: testpword }
 
     - { role: oidc-extension, build_user: vagrant, idp_home: /opt/shibboleth-idp, environment_file: /etc/default/shibboleth-idp, dirsrv_rootdn: "cn=Directory Manager", dirsrv_password: testpword, replpwd: testpword, administration_domain: csc.fi, root: "dc=csc,dc=fi", supplier: "{{ service_name }}", mode: single, service_name: "{{ service_name }}", aci: "teppo@{{ service_name }}" }
