--- a/idp-oidc-extension-api/pom.xml
+++ b/idp-oidc-extension-api/pom.xml
@@ -13,6 +13,10 @@
 	<artifactId>idp-oidc-extension-api</artifactId>
 	<packaging>jar</packaging>
 	<dependencies>
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>oauth2-oidc-sdk</artifactId>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
