--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -17,8 +17,8 @@
 
 - name: Copy nimbus-jose-jwt jar for bulding new idp.war
   copy:
-    src: "{{ playbook_dir }}/idp-oidc-extension-impl/target/dependency/nimbus-jose-jwt-4.35.jar"
-    dest: "{{ idp_home }}/edit-webapp/WEB-INF/lib/nimbus-jose-jwt-4.35.jar"
+    src: "{{ playbook_dir }}/idp-oidc-extension-impl/target/dependency/nimbus-jose-jwt-{{ nimbus_version }}.jar"
+    dest: "{{ idp_home }}/edit-webapp/WEB-INF/lib/nimbus-jose-jwt-{{ nimbus_version }}.jar"
     owner: root
     group: root
     mode: 0644
