--- a/idp-oidc-extension-impl/pom.xml
+++ b/idp-oidc-extension-impl/pom.xml
@@ -31,6 +31,10 @@
                         <groupId>org.geant</groupId>
                         <artifactId>idp-oidc-extension-api</artifactId>
                 </dependency>
+                <dependency>
+                        <groupId>com.google.code.gson</groupId>
+                        <artifactId>gson</artifactId>
+                </dependency>
 	</dependencies>
 	<build>
 		<plugins>
