--- a/idp-oidc-extension-parent/pom.xml
+++ b/idp-oidc-extension-parent/pom.xml
@@ -61,6 +61,11 @@ See LICENSE.txt file in the root directory of this repository for the copyright/
                <version>0.5-SNAPSHOT</version>
                <artifactId>idp-oidc-extension-api</artifactId>
             </dependency>
+            <dependency>
+               <groupId>com.google.code.gson</groupId>
+               <artifactId>gson</artifactId>
+               <version>2.8.0</version>
+            </dependency>
             <!-- Test Dependencies -->
             <dependency>
 	       <groupId>net.shibboleth.idp</groupId>
