--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -113,6 +113,11 @@
     - { option: 'idp.authn.LDAP.bindDN', value: 'cn=Directory Manager' }
     - { option: 'idp.authn.LDAP.bindDNCredential', value: '{{ dirsrv_password }}' }
 
+- name: configure shibboleth-idp idp.properties
+  lineinfile: dest={{ idp_home }}/conf/idp.properties regexp="^#?\s*({{ item.option }}\s*=)" backrefs=yes  line="\\1 {{ item.value }}"
+  with_items:
+    - { option: 'idp.session.StorageService', value: 'shibboleth.StorageService' }
+
 - name: Add one trusted test SP
   blockinfile:
     dest: "{{ idp_home }}/conf/metadata-providers.xml"
