--- a/idp-oidc-extension-impl/pom.xml
+++ b/idp-oidc-extension-impl/pom.xml
@@ -23,18 +23,22 @@
 		</dependency>
 		<dependency>
 			<groupId>net.shibboleth.idp</groupId>
+			<artifactId>idp-attribute-resolver-spring</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.shibboleth.idp</groupId>
 			<artifactId>idp-profile-api</artifactId>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
-                <dependency>
-                        <groupId>org.geant</groupId>
-                        <artifactId>idp-oidc-extension-api</artifactId>
-                </dependency>
-                <dependency>
-                        <groupId>com.google.code.gson</groupId>
-                        <artifactId>gson</artifactId>
-                </dependency>
+		<dependency>
+			<groupId>org.geant</groupId>
+			<artifactId>idp-oidc-extension-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
