testidp.funet.fi to demo_rp

--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -150,7 +150,7 @@
     marker: "<!-- {mark} ANSIBLE MANAGED BLOCK -->"
     insertbefore: "</util:list>"
     content: |
-          <bean parent="RelyingPartyByName" c:relyingPartyIds="testidp.funet.fi">
+          <bean parent="RelyingPartyByName" c:relyingPartyIds="demo_rp">
                <property name="profileConfigurations">
                     <list>
                         <bean parent="OIDC.SSO" p:postAuthenticationFlows="attribute-release" />
