initial error view added

--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Ensure "{{ idp_home }}/flows/oidc" dir exists
   file: path="{{ idp_home }}/flows/oidc" state=directory
 
-- name: Copy oidc flow and beans
+- name: Copy oidc flow, views and beans
   copy:
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
@@ -14,6 +14,8 @@
   with_items:
     - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oidc/oidc-flow.xml", dest: "{{ idp_home }}/flows/oidc/oidc-flow.xml" }
     - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oidc/oidc-beans.xml", dest: "{{ idp_home }}/flows/oidc/oidc-beans.xml" }
+    - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/views/oidc-error.vm", dest: "{{ idp_home }}/views/oidc-error.vm" }
+
 
 - name: Copy nimbus-jose-jwt jar for bulding new idp.war
   copy:
