authn-comparison.xml

--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -192,15 +192,20 @@
     src: static.xml 
     dest: "{{ idp_home }}/jetty-base/webapps/static.xml"
 
-- name: Setting attribute-resolver.xml
+- name: Setting modified attribute-resolver.xml
   template:
     src: attribute-resolver.xml
     dest: "{{ idp_home }}/conf/attribute-resolver.xml"
 
-- name: Setting general-authn.xml
+- name: Setting modified general-authn.xml
   template:
     src: general-authn.xml
     dest: "{{ idp_home }}/conf/authn/general-authn.xml"
+
+- name: Setting modified authn-comparison.xml
+  template:
+    src: authn-comparison.xml
+    dest: "{{ idp_home }}/conf/authn/authn-comparison.xml"
 
 - name: Ensure "{{ idp_home }}/static" dir exists
   file: path="{{ idp_home }}/static/" state=directory
