examples added for OIDCStringArray and OIDCScopedString encoders

--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -150,6 +150,9 @@
              <AttributeRule attributeID="eduPersonPrincipalName">
                  <PermitValueRule xsi:type="ANY" />
              </AttributeRule>
+              <AttributeRule attributeID="eduPersonAffiliation">
+                 <PermitValueRule xsi:type="ANY" />
+             </AttributeRule>
              <AttributeRule attributeID="uid">
                  <PermitValueRule xsi:type="ANY" />
              </AttributeRule>
