--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -39,7 +39,7 @@
     mode: 0644
     remote_src: no
 
-- name: Copy stepup dependency lang-tag.jar for bulding new idp.war
+- name: Copy dependency lang-tag.jar for bulding new idp.war
   copy:
     src: "{{ playbook_dir }}/idp-oidc-extension-impl/target/dependency/lang-tag-1.4.3.jar"
     dest: "{{ idp_home }}/edit-webapp/WEB-INF/lib/lang-tag-1.4.3.jar"
@@ -48,7 +48,7 @@
     mode: 0644
     remote_src: no
 
-- name: Copy stepup dependency json-smart.jar for bulding new idp.war
+- name: Copy dependency json-smart.jar for bulding new idp.war
   copy:
     src: "{{ playbook_dir }}/idp-oidc-extension-impl/target/dependency/json-smart-1.3.1.jar"
     dest: "{{ idp_home }}/edit-webapp/WEB-INF/lib/json-smart-1.3.1.jar"
@@ -57,7 +57,7 @@
     mode: 0644
     remote_src: no
 
-- name: Copy stepup dependency commons-lang3.jar for bulding new idp.war
+- name: Copy dependency commons-lang3.jar for bulding new idp.war
   copy:
     src: "{{ playbook_dir }}/idp-oidc-extension-impl/target/dependency/commons-lang3-3.5.jar"
     dest: "{{ idp_home }}/edit-webapp/WEB-INF/lib/commons-lang3-3.5.jar"
@@ -66,7 +66,7 @@
     mode: 0644
     remote_src: no
 
-- name: Copy stepup dependency commons-collections4.jar for bulding new idp.war
+- name: Copy dependency commons-collections4.jar for bulding new idp.war
   copy:
     src: "{{ playbook_dir }}/idp-oidc-extension-impl/target/dependency/commons-collections4-4.1.jar"
     dest: "{{ idp_home }}/edit-webapp/WEB-INF/lib/commons-collections4-4.1.jar"
@@ -279,6 +279,9 @@
 - name: Ensure "{{ idp_home }}/static" dir exists
   file: path="{{ idp_home }}/static/" state=directory
 
+- name: Ensure "{{ idp_home }}/static/oidc/" dir exists
+  file: path="{{ idp_home }}/static/oidc/" state=directory
+
 - name: Ensure "{{ idp_home }}/static/.well-known/" dir exists
   file: path="{{ idp_home }}/static/.well-known/" state=directory
 
@@ -309,3 +312,25 @@
   shell: ldapmodify -x -D "{{ dirsrv_rootdn }}" -H ldap://localhost:389 -w {{ dirsrv_password }} -f {{ acifile }}
   ignore_errors: yes
   when: aci is defined
+
+- name: fetching httpparser to install nodejs, workaround before centos 7.4
+  command: "rpm -ivh https://kojipkgs.fedoraproject.org//packages/http-parser/2.7.1/3.el7/x86_64/http-parser-2.7.1-3.el7.x86_64.rpm"
+
+- name: Install nodejs and npm
+  yum: name={{ item }} state=present
+  with_items:
+    - nodejs
+    - npm
+
+- name: Install pem-jwk
+  command: npm install -g pem-jwk
+  become: true
+
+- name: "Extracting public key {{ idp_home }}/credentials/idp-signing.key to file  {{ idp_home }}/credentials/idp-pub-signing.pem"                            
+  command: "openssl rsa -in  {{ idp_home }}/credentials/idp-signing.key -outform PEM -pubout -out {{ idp_home }}/credentials/idp-pub-signing.pem"
+  become: true
+
+- name: "Converting {{ idp_home }}/credentials/idp-pub-signing.pem and publishing it as id token signing key {{ idp_home }}/static/oidc/keyset.jwk"      
+  command: "pem-jwk {{ idp_home }}/credentials/idp-pub-signing.pem > {{ idp_home }}/static/oidc/keyset.jwk"
+  become: true
+
